# Markdown-Parser-Performance-Benchmark

./: Cargo.toml  README.md  index.html  learning_mat.txt  package-lock.json  package.json  style.css
docUtility/: explanation.md  plot_parser_chart.py
docUtility/repTests/: boldTests.csv  listUnOrTests.csv  mixedTests.csv  paragraphsTest.csv
documentation/: TestResults1.md  TestResults2.md  TestResults3.md
src/: lib.rs
utility/: benchmark.js
